Fix issue with CodeBlock language list overflow
Tries to fix https://github.com/hunghg255/reactjs-tiptap-editor/issues/74
---
Make the language list in the CodeBlock component scrollable to prevent it from getting out of the screen if too big.

* **CodeBlockActiveButton.tsx**
  - Replace `DropdownMenu` with `Select` component.
  - Set a maximum height and make the dropdown menu scrollable.

* **select.tsx**
  - Add a maximum height and make the `SelectContent` component scrollable.

* **NodeViewCodeBlock.tsx**
  - Set a maximum height and make the language dropdown scrollable.

* **index.module.scss**
  - Add styles to ensure the language list is scrollable.

--- a/src/extensions/CodeBlock/components/NodeViewCodeBlock/index.module.scss
+++ b/src/extensions/CodeBlock/components/NodeViewCodeBlock/index.module.scss
@@ -23,8 +23,6 @@
   }
 }
 
-
-
 .blockInfo {
   display: flex;
   align-items: center;
@@ -48,6 +46,11 @@
     border: none !important;
     outline-offset: 0px !important;
     color: white !important;
+  }
+
+  .richtext-SelectContent {
+    max-height: 200px;
+    overflow-y: auto;
   }
 }
 
